--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,39 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-dark: rgb(37 99 235);
+  --primary-light: #feefef;
+  --secondary-dark: rgb(59 130 246);
+  --secondary-light: #f9f5f5;
+  --white-color: #ffffff;
+  --black-color: #000000;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  padding: 0;
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  background-color: var(--primary-light);
+}
+
+.text-primary {
+  color: var(--primary-dark);
+}
+
+.text-secondary {
+  color: var(--secondary-dark);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 0.1em;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: var(--primary-dark);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-dark);
 }
